k8s/kustomize/echo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  # labels:
  #   app.kubernetes.io/name: echo
spec:
  # selector:
  #   app.kubernetes.io/name: echo
  ports:
    - name: echo
      port: 80
      targetPort: http
      protocol: TCP
