k8s/kustomize/echo/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  # labels:
  #   app.kubernetes.io/name: echo
spec:
  ingressClassName: nginx
  rules:
    - host: echo.gihyo.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: echo
                port:
                  number: 80
